UPDATE ::: Null dereferencing pushes for fortify
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@38453 ef391c1c-ee15-45f7-b1d6-dde3d27a2169